@@ -30,19 +30,11 @@ Currently supported MTAs include
 and <a href="http://www.sendmail.org/" TARGET="Resource Window">Sendmail</a>.
 <br><br>
 
-<li>If you are using an MTA other than qmail, a local delivery agent
-such as 
-<a href="http://www.procmail.org/" TARGET="Resource Window">procmail</a>
-or 
-
-<a href="http://www.flounder.net/~mrsam/maildrop/" TARGET="Resource
-Window">maildrop</a>.  This doesn't necessarily mean you need to
-maintain a .procmailrc or .mailfilter file; TMDA just uses the
-executable to perform final mail delivery.  Any program capable of
-accepting a message on stdin and writing it to mailbox will suffice.
-But again, this is only required if you are <strong>NOT running
-qmail!</strong> <br><br>
-
-
-  
-
+<li>If you are using an MTA <strong>other than qmail</strong>, a local
+delivery agent such as <a href="http://www.procmail.org/"
+TARGET="Resource Window">procmail</a> or <a
+href="http://www.flounder.net/~mrsam/maildrop/" TARGET="Resource
+Window">maildrop</a>.  On non-qmail systems, TMDA uses the LDA to
+perform final mail delivery, and in the case of Sendmail, to invoke
+TMDA <em>and</em> do final delivery.  Thus, a .procmailrc is only required if
+you are running Sendmail.
