@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Dec 21 15:39:28 2001 -->
+<!-- Sun Jan  6 22:21:55 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -155,22 +155,14 @@ Currently supported MTAs include
 and <a href="http://www.sendmail.org/" TARGET="Resource Window">Sendmail</a>.
 <br><br>
 
-<li>If you are using an MTA other than qmail, a local delivery agent
-such as 
-<a href="http://www.procmail.org/" TARGET="Resource Window">procmail</a>
-or 
-
-<a href="http://www.flounder.net/~mrsam/maildrop/" TARGET="Resource
-Window">maildrop</a>.  This doesn't necessarily mean you need to
-maintain a .procmailrc or .mailfilter file; TMDA just uses the
-executable to perform final mail delivery.  Any program capable of
-accepting a message on stdin and writing it to mailbox will suffice.
-But again, this is only required if you are <strong>NOT running
-qmail!</strong> <br><br>
-
-
-  
-
+<li>If you are using an MTA <strong>other than qmail</strong>, a local
+delivery agent such as <a href="http://www.procmail.org/"
+TARGET="Resource Window">procmail</a> or <a
+href="http://www.flounder.net/~mrsam/maildrop/" TARGET="Resource
+Window">maildrop</a>.  On non-qmail systems, TMDA uses the LDA to
+perform final mail delivery, and in the case of Sendmail, to invoke
+TMDA <em>and</em> do final delivery.  Thus, a .procmailrc is only required if
+you are running Sendmail.
 
 </TD><!-- end of body cell -->
 </TR><!-- end of sidebar/body row -->
