@@ -1,3 +1,9 @@
+2002-01-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* requirements.ht (href): Clarify that while a LDA such as
+	procmail is required for all non-qmail users, only Sendmail
+	requires a .procmailrc to be maintained.
+
 2002-01-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* config-client.ht: Add nmh configuration information.
